<resources>
    <string name="app_name">My git</string>
    <string name="txt_Nombres">Mijael Brajhan</string>
    <string name="txt_Telefono">Telefono</string>
    <string name="txt_correo">Correo</string>
    <string name="txt_dni">DNI</string>
    <string name="txt_direccion">Direccion</string>
    <string name="txt_pais">Pais</string>
    <string name="txt_apellido">Apellido</string>
</resources>